:art: ui/ux: grid grid-gap fix

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -225,7 +225,6 @@ select {
 @media screen and (max-width: 576px) {
   .l-grid {
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 16px;
 
     &-full,
     &-extra-large,
@@ -1429,7 +1428,6 @@ select {
   padding: 80px 0;
 
   &-title {
-    width: max-content;
     font-size: 80px;
     line-height: 80px;
     font-weight: 700;
